foundry/crucible/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: crucible
  labels:
    name: crucible
