foundry/crucible/stackstorm-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackstorm-st2web-ingress
  labels:
    app: ingress
    tier: frontend
    vendor: stackstorm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: $DOMAIN
    http:
      paths:
        - path: "/stackstorm/(.*)"
          pathType: Prefix
          backend:
            service:
              name: stackstorm-ha-st2web
              port:
                number: 80
  tls:
    - secretName: appliance-cert
      hosts:
        - foundry.local
